--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 anyio==4.8.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+defusedxml==0.7.1
 dotenv==0.9.9
 exceptiongroup==1.2.2
+fonttools==4.56.0
+fpdf2==2.8.2
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+pillow==11.1.0
 python-dotenv==1.0.1
 python-telegram-bot==21.10
 requests==2.32.3
